# Recruitment_Agent

./: .gitignore  main.py  pyproject.toml  report.txt
app/: main.py  pipeline.py  requirements.txt
app/agents/: interview_gen.py  interview_gen_agent.py  job_description_analyzer.py  matcher.py  resume_parser.py
app/api/: jd.py
app/core/: llm.py
app/prompts/: interview_generator_prompt.py  job_description_prompt.py  matcher_prompt.py  resume_prompt.py
app/schemas/: interview_questions.py  job_description.py  match_result.py  resume.py
app/utils/: pdf_reader.py  pdf_writer.py  report_generator.py  report_writer.py
data/jobs/: job_description.txt
reports/: report_20260721_195457.txt
tests/: test_interview_generator.py  test_jd.py  test_matcher.py  test_report_generator.py  test_resume_parser.py
